# wallet-sdk

./: .gitignore  Cargo.toml
example_wallet/coin_60/account_0/: 0x296a3C6B001e163409D7df318799bD52B5e3b67d-pk  0x296a3C6B001e163409D7df318799bD52B5e3b67d-seed
src/: api.rs  error.rs  handler.rs  keystore.rs  language.rs  lib.rs  response.rs
src/error/: bad_request.rs  mod.rs  system.rs
src/error/common/: database.rs  mod.rs  parse.rs  serde.rs
src/eth_keystore/: mod.rs
src/keystore/: derive.rs  mod.rs  pk.rs  seed.rs  signature.rs  transaction.rs
src/utils/: derivation.rs  file.rs  language.rs  mod.rs
src/wallet/: mod.rs  private_key.rs
src/wallet/pk_wallet/: error.rs  mnemonic.rs  mod.rs  private_key.rs
src/wallet/seed_wallet/: mod.rs
src/wallet_manager/: api.rs  handler.rs  mod.rs  response_struct.rs
src/wallet_tree/: manager.rs  mod.rs
test_wallet/: 0x296a3C6B001e163409D7df318799bD52B5e3b67d-pk  0x296a3C6B001e163409D7df318799bD52B5e3b67d-seed
