[package]
name = "wallet-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "providers",
    "provider-http",
    "rpc-types-eth",
    "node-bindings",
    "network",
    "signers",
    "signer-wallet",
    "signer-keystore",
    "signer-mnemonic",
] }
rand = "0.8.5"

thiserror = "1"
secp256k1 = { version = "0.28", features = ["rand"] }
base64 = "0.22.1"
coins-bip39 = "0.8.7"
coins-bip32 = "0.8.7"
tempfile = "3.10.1"
hdwallet = "0.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"